--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="container">
-            <img class="bg" src="../img/bg.png" alt="">
+            <img class="bg" src="img/bg.png" alt="">
             <div class="judul">
             <h1>Welcome <span class="color">to</span></h1>
             <h3>Skanu</h3>
@@ -47,10 +47,10 @@
             <span id="slide3"></span>
             <span id="slide4"></span>
         <div class="images">
-            <img src="../img/hero.jpg">
-            <img src="../img/hero.jpg">
-            <img src="../img/hero.jpg">
-            <img src="../img/hero.jpg">
+            <img src="img/hero.jpg">
+            <img src="img/hero.jpg">
+            <img src="img/hero.jpg">
+            <img src="img/hero.jpg">
         </div>
         </div>
         <div class="navigasi">
@@ -73,7 +73,7 @@
                     <p class="nama">Abdul <br><span>Aziz</span> Mulyana</p>
                 </div>
                 <div class="flip-card-back">
-                    <img class="foto" src="../avatar/01.jpg" alt="">
+                    <img class="foto" src="avatar/01.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
                     <p class="nama">Ahmad <span>Febri</span>anto</p>
                 </div>
                 <div class="flip-card-back">
-                    <img class="foto" src="../avatar/02.jpg" alt="">
+                    <img class="foto" src="avatar/02.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
                     <p class="nama">Akhmad <span>Khamam</span>i</p>
                 </div>
                 <div class="flip-card-back">
-                    <img class="foto" src="../avatar/03.jpg" alt="">
+                    <img class="foto" src="avatar/03.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
                     <p class="nama">An<span>dito</span> Nugroho</p>
                 </div>
                 <div class="flip-card-back">
-                    <img class="foto" src="../avatar/04.jpg" alt="">
+                    <img class="foto" src="avatar/04.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@
                     <p class="nama"><span>Andy</span> Maretiano</p>
                 </div>
                 <div class="flip-card-back">
-                    <img class="foto" src="../avatar/05.jpg" alt="">
+                    <img class="foto" src="avatar/05.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
                     <p class="nama"><span>Anis</span> Surani</p>
                 </div>
                 <div class="flip-card-back">
-                    <img class="foto" src="../avatar/06.jpg" alt="">
+                    <img class="foto" src="avatar/06.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -133,7 +133,7 @@
                 <p class="nama"><span>Anisah</span> Berlin Aprilliana</p>
               </div>
               <div class="flip-card-back">
-                <img class="foto" src="../avatar/07.jpg" alt="">
+                <img class="foto" src="avatar/07.jpg" alt="">
               </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
                     <p class="nama"><span>Baina</span> Aidihim</p>
                 </div>
                 <div class="flip-card-back">
-                    <img class="foto" src="../avatar/08.jpg" alt="">
+                    <img class="foto" src="avatar/08.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -153,7 +153,7 @@
                     <p class="nama"><span>Bunga</span> Indah Santrani</p>
                 </div>
                 <div class="flip-card-back">
-                    <img class="foto" src="../avatar/09.jpg" alt="">
+                    <img class="foto" src="avatar/09.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -163,7 +163,7 @@
                     <p class="nama"><span>Dede</span> Cahyanti</p>
                 </div>
                 <div class="flip-card-back">
-                    <img class="foto" src="../avatar/10.jpg" alt="">
+                    <img class="foto" src="avatar/10.jpg" alt="">
                 </div>
             </div>
             </div>
@@ -173,7 +173,7 @@
                         <p class="nama"><span>Desi</span><br> Catur Murtiana</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/11.jpg" alt="">
+                        <img class="foto" src="avatar/11.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -183,7 +183,7 @@
                         <p class="nama"><span>Duta</span>syah Arinal <br> Haq</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/12.jpg" alt="">
+                        <img class="foto" src="avatar/12.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                         <p class="nama"><span>Elsa</span> Wulandari</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/13.jpg" alt="">
+                        <img class="foto" src="avatar/13.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                         <p class="nama"><span>Evi</span> Faqiatul Maroh</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/14.jpg" alt="">
+                        <img class="foto" src="avatar/14.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                         <p class="nama"><span>Fatih</span> Maulana <br>Al fadilah</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/15.jpg" alt="">
+                        <img class="foto" src="avatar/15.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
                         <p class="nama"><span>Indra</span> Priyatna Wibawa</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/16.jpg" alt="">
+                        <img class="foto" src="avatar/16.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -233,7 +233,7 @@
                         <p class="nama"><span>Itmam</span> Awalul Amri</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/17.jpg" alt="">
+                        <img class="foto" src="avatar/17.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -243,7 +243,7 @@
                         <p class="nama"><span>Lailatul</span> Maghfiroh</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/18.jpg" alt="">
+                        <img class="foto" src="avatar/18.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -253,7 +253,7 @@
                         <p class="nama"><span>Lau</span>dia</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/19.jpg" alt="">
+                        <img class="foto" src="avatar/19.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -263,7 +263,7 @@
                         <p class="nama">M. <span>Erwin</span> Saputra</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/20.jpg" alt="">
+                        <img class="foto" src="avatar/20.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -273,7 +273,7 @@
                         <p class="nama-beda"><span>Melinda</span> Khoerunnisa</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/21.jpg" alt="">
+                        <img class="foto" src="avatar/21.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -283,7 +283,7 @@
                         <p class="nama">Moh. <br><span>Prima</span> Andika</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/22.jpg" alt="">
+                        <img class="foto" src="avatar/22.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -293,7 +293,7 @@
                         <p class="nama-beda" >Moh. <br><span>Rheifal</span> Ferdiansyah</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/23.jpg" alt="">
+                        <img class="foto" src="avatar/23.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -303,7 +303,7 @@
                         <p class="nama-beda" >Muhammad <span>Ghoni</span> Muzakki</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/24.jpg" alt="">
+                        <img class="foto" src="avatar/24.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -313,7 +313,7 @@
                         <p class="nama"><span>Mutiara</span> Yumna</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/25.jpg" alt="">
+                        <img class="foto" src="avatar/25.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -323,7 +323,7 @@
                         <p class="nama"><span>Naura</span> Jahra Huwaida</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/26.jpg" alt="">
+                        <img class="foto" src="avatar/26.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -333,7 +333,7 @@
                         <p class="nama">Nur <br><span>Sifa</span></p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/27.jpg" alt="">
+                        <img class="foto" src="avatar/27.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -343,7 +343,7 @@
                         <p class="nama-beda">Okta<span>via</span> Ramadhanti</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/28.jpg" alt="">
+                        <img class="foto" src="avatar/28.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -353,7 +353,7 @@
                         <p class="nama"><span>Putri</span> Melati</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/29.jpg" alt="">
+                        <img class="foto" src="avatar/29.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -363,7 +363,7 @@
                         <p class="nama">Septiati <span>Nisa</span> Faoziyah</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/30.jpg" alt="">
+                        <img class="foto" src="avatar/30.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -373,7 +373,7 @@
                         <p class="nama"><span>Shifa Eka</span> Aulia Nurul Azmi</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/31.jpg" alt="">
+                        <img class="foto" src="avatar/31.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -383,7 +383,7 @@
                         <p class="nama"><span>Silvia</span> Usman</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/32.jpg" alt="">
+                        <img class="foto" src="avatar/32.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -393,7 +393,7 @@
                         <p class="nama-beda"><span>Sri <br> Fitria</span> Ramadhani</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/33.jpg" alt="">
+                        <img class="foto" src="avatar/33.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -403,7 +403,7 @@
                         <p class="nama"><span>Teressa</span> Maharani Mardiyah</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/34.jpg" alt="">
+                        <img class="foto" src="avatar/34.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -413,7 +413,7 @@
                         <p class="nama"><span>Twin Sesa</span> Rizky Kurniawan</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/35.jpg" alt="">
+                        <img class="foto" src="avatar/35.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -423,7 +423,7 @@
                         <p class="nama"><span>Umu</span> Hikayatul Khasanah</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/36.jpg" alt="">
+                        <img class="foto" src="avatar/36.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -433,7 +433,7 @@
                         <p class="nama"><span>Vivi</span> Zulfa Az-Zahra</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/37.jpg" alt="">
+                        <img class="foto" src="avatar/37.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -443,7 +443,7 @@
                         <p class="nama"><span>Yunna</span> Silviriani</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/38.jpg" alt="">
+                        <img class="foto" src="avatar/38.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -453,7 +453,7 @@
                         <p class="nama">Moh. <span>Sopyan</span> Wibowo</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/39.jpg" alt="">
+                        <img class="foto" src="avatar/39.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -463,7 +463,7 @@
                         <p class="nama"><span>Fadhlan</span> Syafa Ghifari</p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="foto" src="../avatar/.jpg" alt="">
+                        <img class="foto" src="avatar/.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -473,8 +473,8 @@
         <h4 class="explore">Explore We Social Media</h4>
     </div>
     <div class="social-media">
-        <button class="sosmed"><img src="../img/instagram.png" class="vektor">skanuu.xii_tkj3</button>
-        <button class="sosmed"><img src="../img/google-gmail.png" class="vektor">skanuxtkj3@gmail.com</button>
+        <button class="sosmed"><img src="img/instagram.png" class="vektor">skanuu.xii_tkj3</button>
+        <button class="sosmed"><img src="img/google-gmail.png" class="vektor">skanuxtkj3@gmail.com</button>
     </div>
     </section>
     </main>
@@ -487,8 +487,8 @@
         <p class="alamat">Jln. KH. Agus Salim, Kudaile, Kec. Slawi, Kab. Tegal </p>
         <h3 class="akhir">Social Media</h3>
         <div class="icons">
-        <button class="icon"><img src="../img/instagram.png" alt=""></button>
-        <button class="icon"><img src="../img/google-gmail.png" alt=""></button>
+        <button class="icon"><img src="img/instagram.png" alt=""></button>
+        <button class="icon"><img src="img/google-gmail.png" alt=""></button>
         </div>
         </div>
         <div class="penutup">
